---
title: MineMaze Domain Model
id: 3f094e36-3975-42d6-aa98-2e41eb7ebcf9
---
classDiagram
    %% Core domain classes
    class Controllable {
        <<Interface>>
        +moveTo(x, y)
    }
    class MineMaze {
        -MapGrid mapGrid
        -Pusher pusher
        -Bomber bomber
        -int gameTick
        -PropertiesLoader properties
        +startGame()
        +endGame()
    }
    class MapGrid {
        -Ore[] ores
        -Target[] targets
        -OreCart[] oreCarts
        -HardRock[] hardRocks
        -Boulder[] boulders
        -FuelPack[] fuelPacks
        -Booster[] boosters
        +getElementAt(x, y)
        +setElementAt(x, y, element)
        +getNeighbors(x, y)
    }
    %% Abstract base for all map elements
    class MapElement {
        <<Abstract>>
        -int x
        -int y
        +getPosition()
    }
    class Ore {
        +isCollected
    }
    class Target {
    }
    class OreCart {
    }
    class HardRock {
    }
    class Boulder {
    }
    class Collectable {
        <<Interface>>
        +collect()
    }
    class Booster {
        +collect()
    }
    class FuelPack {
        +collect()
    }
    class Bomb {
        -int placedTick
        +explode()
    }
    MapElement <|-- Ore
    MapElement <|-- Target
    MapElement <|-- OreCart
    MapElement <|-- HardRock
    MapElement <|-- Boulder
    MapElement <|-- FuelPack
    MapElement <|-- Booster
    MapElement <|-- Bomb

    class Pusher {
        -int fuel
        -Booster booster
        -int x
        -int y
    +moveTo(x, y)
    +pushOre(ore)
    +pushBoulder(boulder)
    +collectFuel(fuelPack)
    +collectBooster(booster)
    }
    class Bomber {
        -int bombsAvailable
        -int initialX
        -int initialY
        -int x
        -int y
    +moveTo(x, y)
    +placeBomb(x, y)
    +returnToInitial()
    }
Controllable <|.. Pusher
Controllable <|.. Bomber
    class PropertiesLoader {
        +loadProperties()
        +getConfig(key)
    }

    %% Relationships
    MineMaze *-- MapGrid : "has"
    MineMaze *-- Pusher : "controls"
    MineMaze *-- Bomber : "controls"
    MineMaze *-- PropertiesLoader : "uses"
    MapGrid "1" *-- "*" MapElement : "contains"
    Collectable <|.. Booster
    Collectable <|.. FuelPack
    Pusher --> Collectable : "collects"
    Pusher --> Ore : "pushes"
    Pusher --> Boulder : "pushes (with booster)"
    Bomber o-- Bomb : "places"
    Bomb --> HardRock : "destroys"
    Bomb --> Boulder : "destroys"